[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Pin transitive dependencies that require Rust edition 2024
# to older versions compatible with the Solana 1.18 verification Docker container (Rust 1.75)
[patch.crates-io]
cpufeatures = { version = "=0.2.17" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
