[package]
name = "trading-pool"
version = "0.1.0"
description = "Transparent SOL trading fund — on-chain ledger of obligations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
