[package]
name = "trading-pool"
version = "0.1.0"
description = "Transparent SOL trading fund — on-chain ledger of obligations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-security-txt = "1.1.1"
